//
// Copyright 2023 DXOS.org
//

syntax = "proto3";

package dxos.echo.indexing;

message IndexKind {
  enum Kind {
    /// Match by typename.
    SCHEMA_MATCH = 0;
    /// Match by field value.
    FIELD_MATCH = 1;
    /// Match by full text.
    FULL_TEXT = 2;
    /// Match by vector.
    VECTOR = 3;
    /// Match by graph relationships.
    GRAPH = 4;
  }
  
  Kind kind = 1;
  optional string field = 2;
}

message IndexConfig {
  repeated IndexKind indexes = 1;
  /**
    * Is indexing enabled (FEATURE FLAG).
    * If not set, the default is false.
    * TODO(mykola): Delete once we promote it as a production feature.
    */
  optional bool enabled = 2;
}
